[project]
name = "homework-10-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander",email = "AlexChapovg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "executed (>=0.9.0.2,<0.10.0.0)"
]

[tool.poetry]
packages = [{include = "homework_10"}]


[tool.poetry.group.lint.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
